# moj-dlt-workshop

./: .gitignore  CONTRIBUTIONS.md  README.md  duckdb_reader.ipynb  main.py  pyproject.toml
.github/workflows/: tests.yml
data_generator/: data_generator.py
evaluation/add_metadata/: add_metadata.md  add_metadata.py
evaluation/destinations/: check_tables.py  destinations.md  destinations.py
evaluation/enforce_contract/: enforce_contract.py  evaluation.md
evaluation/enforce_contract/data/customer_data/_dlt_loads/: dlt_enforce_contract__1727786024.9417238.jsonl  dlt_enforce_contract__1727786074.810499.jsonl  dlt_enforce_contract__1727787911.57631.jsonl  dlt_enforce_contract__1727787977.200172.jsonl  dlt_enforce_contract__1727790253.785779.jsonl  dlt_enforce_contract__1727790387.535986.jsonl  dlt_enforce_contract__1727790389.189538.jsonl
evaluation/enforce_contract/data/customer_data/load_data_from_source/: 1727786024.9417238.f131815f09.jsonl  1727786074.810499.20eb5ee9a8.jsonl  (+4 more)
evaluation/enforce_contract/schemas/export/: dlt_enforce_contract.schema.yaml
evaluation/enforce_contract/schemas/import/: dlt_enforce_contract.schema.yaml
evaluation/graceful_recovery/: graceful_recovery.py  simulate_fail_steps.ipynb  tenacity_retry_example.py
evaluation/scaling/: boto3_test.py  config.toml  scaling.py
evaluation/with_without_dlt/: with_without_dlt.md
python_apps/: __init__.py  data_generator.py  environment.py
raw_data/: synthetic_file_0.jsonl
tests/unit/: conftest.py  test_environment.py
tpcds-local/boto/scale=1/: data.parquet
(+13 files in other folders)
